--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,33 @@
 # Prerequisites
 *.d
 
+# Precompiled Headers
+*.gch
+*.pch
+
+# Fortran module files
+*.mod
+*.smod
+
 # Compiled Object files
 *.slo
 *.lo
 *.o
 *.obj
 
-# Precompiled Headers
-*.gch
-*.pch
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
 
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
 
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# Python cache
+__pycache__/
 
 # Executables
 *.exe
@@ -39,7 +42,6 @@ x64/
 *.vfproj
 
 # test
-lib/
 test_*
 log_*
 
